# SpeakEasy

./: .gitignore  .gitmodules  ARCHITECTURE.md  LICENSE  README.md  main.py  refiner.py  requirements.txt
tauri-app/src/: app.js  index.html  styles.css
tauri-app/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: audio.rs  config.rs  main.rs  refiner.rs  vad.rs
