[package]
name = "speakeasy"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.14"
cpal = "0.15"
device_query = "2"
enigo = { version = "0.3", features = ["serde"] }
arboard = "3"
regex = "1"
ureq = { version = "2", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
